<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailsScreen" >
    
	<TextView android:id="@+id/title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/title"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText android:id="@+id/details_task"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="" 
        android:layout_below="@id/title"
        android:hint="@string/add_task"/>
    
    <TextView android:id="@+id/notes"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/notes"
        android:layout_below="@id/details_task"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="15sp"/>
    
    <EditText android:id="@+id/notesText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notes"
        android:hint="@string/addNotes"/>
    
  	<TextView android:id="@+id/date"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/due_date"
        android:layout_below="@id/notesText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="15sp"/>
  	
    <TextView android:id="@+id/datePicker"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
		style="@android:style/Widget.DeviceDefault.Light.Spinner"        
        android:layout_below="@id/date"
        android:onClick="showDatePickerDialog" 
		android:clickable="true"/> 
        
    <Button android:id="@+id/addToCalendar"
        android:text="@string/add_to_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/datePicker"
        android:layout_marginTop="15sp" />
    
    <Button android:id="@+id/done"
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addToCalendar"
        android:layout_marginTop="15sp"/>
    
    <Button android:id="@+id/cancel"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/done"
        android:layout_below="@id/addToCalendar"
        android:layout_marginTop="15sp"/>

    <Button android:id="@+id/delete"
        android:text="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/cancel"
        android:layout_below="@id/addToCalendar"
        android:layout_marginTop="15sp"/>
    
    
</RelativeLayout>
