<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
   
   <!-- Search, should appear as action button
   <item android:id="@+id/action_search"
         android:icon="@drawable/ic_action_search"
         android:title="@string/action_search"
         android:showAsAction="ifRoom" />-->
   <!-- Settings, should always be in the overflow -->
   
   <item android:id="@+id/show_completed"
       android:title="@string/show_completed"
       android:showAsAction="never" />
   
   <item android:id="@+id/hide_completed"
       android:title="@string/hide_completed"
       android:showAsAction="never" />
   
   <item android:id="@+id/delete_completed"
       android:title="@string/delete_completed"
       android:showAsAction="never" />
   
   <!--<item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:showAsAction="never" /> -->
         
   
</menu>
